--- a/week-1/1_clase.intro_r_language.Rmd
+++ b/week-1/1_clase.intro_r_language.Rmd
@@ -29,7 +29,32 @@ hist(x)
 ### Tipos de datos
 
 ```{r}
-a <-
-b
+# Data types basicas
+# Existing list (your code)
+soy_un_number <- 10
+soy_un_string <- "Soy un texto"
+soy_un_vector <- seq(1, 100, by = 2)
+soy_un_boolean <- TRUE
+soy_un_date <- Sys.Date()
+soy_otro_date <- as.Date(paste(2025, 10, 19, sep = "-"), format = "%Y-%m-%d")
 
+lista_heterogeneo <- list(
+  number = soy_un_number,
+  string = soy_un_string,
+  vector = soy_un_vector,
+  boolean = soy_un_boolean,
+  date = soy_un_date,
+  another_date = soy_otro_date
+)
+
+# Append a new items
+lista_heterogeneo <- c(lista_heterogeneo, list(new_item = "¡Hola!"))
+
+# Iterate and print
+for (name in names(lista_heterogeneo)) {
+  cat("Nombre:", name, "\n")
+  print(lista_heterogeneo[[name]])
+  cat("\n----\n")
+}
 ```
+
