--- a/R-Clases/week-1/clase_3/manipulacion_data.Rmd
+++ b/R-Clases/week-1/clase_3/manipulacion_data.Rmd
@@ -5,6 +5,14 @@ output:
 
 ---
 
+```{R packages-installation}
+if(!require("tidyverse")) install.packages("tidyverse")
+```
+
+```{R load-packs}
+library(tidyverse)
+```
+
 ```{R obtencion-data-from-url}
 url_path <- "https://gist.githubusercontent.com/rnirmal/e01acfdaf54a6f9b24e91ba4cae63518/raw/6b589a5c5a851711e20c5eb28f9d54742d1fe2dc/datasets.csv"
 data <- read.csv(url_path, sep = ",")
