--- a/R-Clases/week-1/clase_3/manipulacion_data.Rmd
+++ b/R-Clases/week-1/clase_3/manipulacion_data.Rmd
@@ -2,7 +2,6 @@
 title: Manipulacion de datos con R
 output:
     html_output: default
-
 ---
 
 ```{R packages-installation}
@@ -22,14 +21,14 @@ glimpse(data)
 ```{R obtencion-data-from-local}
 
 library(dplyr)
-
-"week-1/clase_3/csv/data_sample.csv" %>%
+library(here)
+"R-Clases/week-1/clase_3/csv/data_sample.csv" %>%
   strsplit(split = "/", fixed = TRUE) %>%
   .[[1]] %>%
   { do.call(here::here, as.list(.)) } %>%
   read.csv() -> groups
 
-# forma de obtencion con csv local
+# forma de con csv local
 head(groups)
 
 ```
@@ -41,18 +40,46 @@ head(groups)
 install.packages("DBI")
 install.packages("RMySQL")
 
-library(DBI)
+# library(DBI)
 library(RMySQL)
 ```
 
 
 ```{R obtencion-data-from-db}
 
-query_data <- paste("SELECT","    c.id,","    c.ozone,","    c.solar_r,","    c.wind,","    c.temp,","    c.month,","    c.day,","    w.name","FROM `weather`.`cities` AS w","LEFT JOIN `weather`.`weather_data` AS c ON w.id = c.city_id",sep = "\n")
+# Construcción de la consulta SQL
+query_data <- paste(
+  "SELECT",
+  "    c.id,",
+  "    c.ozone,",
+  "    c.solar_r,",
+  "    c.wind,",
+  "    c.temp,",
+  "    c.month,",
+  "    c.day,",
+  "    w.name",
+  "FROM `weather`.`cities` AS w",
+  "LEFT JOIN `weather`.`weather_data` AS c ON w.id = c.city_id",
+  sep = "\n"
+)
 
-mysql_cnx <- dbConnect(MySQL(),db_name="weather",host="127.0.0.1",port=3306,user="root",password="pass_admin")
+# Conexión a la base de datos MySQL
+mysql_cnx <- dbConnect(
+  MySQL(),
+  dbname   = "weather",
+  host     = "127.0.0.1",
+  port     = 3306,
+  user     = "root",
+  password = "pass_admin"
+)
 
-dataframe <- dbGetQuery(mysql_cnx,query_data)
+# Ejecutar consulta y obtener resultados como dataframe
+dataframe <- dbGetQuery(mysql_cnx, query_data)
 
+# Ver las primeras filas del dataframe
 head(dataframe)
+
 ```
+
+---
+
