--- a/R-Clases/week-1/clase_3/manipulacion_data.Rmd
+++ b/R-Clases/week-1/clase_3/manipulacion_data.Rmd
@@ -96,5 +96,6 @@ names(airquality)
 
 - **Formas de selecion de la data dentro del dataset**
 ```{R vectores-logicos}
+print("Realizando seleccionado por codigo vectorial")
 
 ```
